<resources>
    <string name="app_name">Abalone Detector</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="running_total">Running Total:</string>
    <string name="current_count">Current Count:</string>
    <string name="add_count">Add Count</string>
    <string name="discard_count">Discard Count</string>
    <string name="reset_total">Reset Total</string>
    <string name="default_value">0</string>
</resources>