<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.pytorch.demo.objectdetection.MainActivity">

    <TextView
        android:id="@+id/runningTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/running_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/runningTotalTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countDisplayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runningTotalTextView" />

    <TextView
        android:id="@+id/countView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/countDisplayView"
        app:layout_constraintTop_toBottomOf="@+id/totalView" />


    <Button
        android:id="@+id/detectButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/detect"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/camera_preview" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_count"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/camera_preview"
        app:layout_constraintStart_toStartOf="@+id/camera_preview"
        app:layout_constraintTop_toBottomOf="@+id/camera_preview" />

    <Button
        android:id="@+id/discardButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/discard_count"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/reset_total"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/camera_preview" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/detectButton"
        app:layout_constraintStart_toStartOf="@+id/detectButton"
        app:layout_constraintTop_toBottomOf="@+id/detectButton" />

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_marginTop="124dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <org.pytorch.demo.objectdetection.ResultView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>